--- a/src/DotNetty.Codecs.CoapTcp/DotNetty.Codecs.CoapTcp.csproj
+++ b/src/DotNetty.Codecs.CoapTcp/DotNetty.Codecs.CoapTcp.csproj
@@ -39,22 +39,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="blbt\BLBTL1Codec.cs" />
-    <Compile Include="blbt\BLBTMessage.cs" />
-    <Compile Include="blbt\MessageOptionHelper.cs" />
-    <Compile Include="CodecFactory.cs" />
-    <Compile Include="IDecoder.cs" />
-    <Compile Include="IEncoder.cs" />
+    <Compile Include="Decoder.cs" />
+    <Compile Include="Encoder.cs" />
+    <Compile Include="EmptyMessage.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="MessageOption.cs" />
+    <Compile Include="MessageOptionDecoder.cs" />
+    <Compile Include="MessageOptionEncoder.cs" />
     <Compile Include="MessageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="util\BytesBuilder.cs" />
-    <Compile Include="util\BytesReader.cs" />
-    <Compile Include="util\BytesUtil.cs" />
-    <Compile Include="util\IBytesBuildHelper.cs" />
-    <Compile Include="util\VariableLengthIntegerCodec.cs" />
-    <Compile Include="util\IntegerEncoding.cs" />
+    <Compile Include="Request.cs" />
+    <Compile Include="RequestType.cs" />
+    <Compile Include="Response.cs" />
+    <Compile Include="util\UintDecoder.cs" />
+    <Compile Include="util\UintEncoder.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotNetty.Buffers\DotNetty.Buffers.csproj">
+      <Project>{5de3c557-48bf-4cdb-9f47-474d343dd841}</Project>
+      <Name>DotNetty.Buffers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DotNetty.Codecs\DotNetty.Codecs.csproj">
+      <Project>{2abd244e-ef8f-460d-9c30-39116499e6e4}</Project>
+      <Name>DotNetty.Codecs</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DotNetty.Common\DotNetty.Common.csproj">
+      <Project>{de58fe41-5e99-44e5-86bc-fc9ed8761daf}</Project>
+      <Name>DotNetty.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DotNetty.Transport\DotNetty.Transport.csproj">
+      <Project>{8218c9ee-0a4a-432f-a12a-b54202f97b05}</Project>
+      <Name>DotNetty.Transport</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
